Attempt to fix overflow issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
   width: 100%;
   margin: 0;
+  position: relative;
   overflow-x: hidden;
   font-family: "Raleway", sans-serif;
   color: #fff;
